--- a/plugin.yml
+++ b/plugin.yml
@@ -1,8 +1,8 @@
 name: SocialSpy
 main: SocialSpy\SocialSpy
 version: "1.0.0"
-api: ["3.0.0-ALPHA7"]
-author: ggomezz
+api: ["3.0.0-ALPHA6, 3.0.0-ALPHA7, 3.0.0-ALPHA8, 3.0.0-ALPHA9, 3.0.0-ALPHA10"]
+author: ggomezz, edited by Zeao
 description: Useful 'spy' commands for Admins
 
 commands:
